--- a/test.Rmd
+++ b/test.Rmd
@@ -11,16 +11,15 @@ knitr::opts_chunk$set(echo = TRUE)
 
 *l'intérêt de ces approches (à quoi servent-elles ?) en apprentissage statistique supervisé. N.B.: une attention particulière devra être portée à la rigueur des objets et arguments mathématiques invoqués*
 
-
 ## Description des méthodes 
 
-*Pour chaque méthode : une fiche descriptive s'appuyant notamment sur un ou des schémas inédits* ;*
+*Pour chaque méthode : une fiche descriptive s'appuyant notamment sur un ou des schémas inédits* 
+
 ### Validation (croisée) hold out
 
 - Concept
 - Avantages
 - Inconvénients
-
 
 ### Validation croisée leave-p-out
 
